[package]
name = "canopen-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
libc = "0.2"
socketcan = { git = "https://github.com/socketcan-rs/socketcan-rs", rev = "c3004f0d7c600cd3964cd8655fd26f670d7c87e7", features = [
    "async-std", # for async_io module though we don't use async-std
] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
